<resources>
    <string name="app_name">Nutricion ABC</string>
    <string name="app_Correo">Correo</string>
    <string name="app_Contraseña">Contraseña</string>
    <string name="app_Registrar">Registrar</string>
    <string name="app_Nombre">Nombre</string>
    <string name="desarrolladores">Desarrollado por Molina Rendon Roa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Pantalla Login Nutricion ABC -->
    <string name="LoginTXT">Login Nutricion ABC</string>
    <string name="Correo">Correo electronico</string>
    <string name="Password">Contraseña</string>
    <string name="BtnIngresar">Ingresar</string>
    <string name="BtnRegistroCliente">¿No tienes una cuenta? Registrate</string>
    <string name="BtnRegistroNutriologo">Registrarse como nutriologo</string>


    <!--Registro de Usuario -->
    <string name="TXTNombreUsuario">Nombre</string>
    <string name="TXTApellidoUsuario">Apellido</string>
    <string name="TXTFechaNacimientoUsuario">Fecha Nacimiento</string>
    <string name="TXTCorreoUsuario">Correo</string>
    <string name="TXTPasswordUsuario">Password</string>
    <string name="TXTFechaCreacionUsuario">Fecha Creacion</string>
    <string name="TXTDireccionUsuario">Direccion</string>
    <string name="TXTCiudadUsuario">Ciudad</string>
    <string name="TXTTelefonoUsuario">Telefono</string>
    <string name="BtnRegistrarClienteBD">Registrarse</string>
    <string name="TXTRegistroUsuarios">Registro de Usuarios</string>

    <!-- Menu de Opciones Cliente -->
    <string name="Salir">Cerrar sesión</string>
    <string name="Opcion_uno_Cliente">Informacion Nutriologos</string>
    <string name="Opcion_dos_Cliente">Gestionar Hijos</string>
    <string name="Opcion_tres_Cliente">Historial Planes Nutricionales</string>
    <string name="Opcion_cuatro_Cliente">Opción 4</string>
    <string name="Opcion_cinco_Cliente">Opción 5</string>
    <string name="usuario" />

    <!-- Menu de opciones Nutriologo -->
    <string name="Opcionestxt">Opciones</string>
    <string name="Opcion_uno_Nutriologo">Listado de Pacientes Disponibles</string>
    <string name="Opcion_dos_Nutriologo">Planes Nutricionales</string>
    <string name="Opcion_tres_Nutriologo">Alimentos</string>
    <string name="Opcion_cuatro_Nutriologo">Opción 4 Nutriologo</string>
    <string name="Opcion_cinco_Nutriologo">Opción 5 Nutriologo</string>
    <string name="MasOpcionestxt">Mas Opciones</string>

    <!--Menu de opciones Administrador -->
    <string name="Opcion_uno_Administrador">CRUD Usuarios</string>
    <string name="Opcion_dos_Administrador">Opción 2 Administrador</string>
    <string name="Opcion_cuatro_Administrador">Opción 4 Administrador</string>
    <string name="Opcion_cinco_Administrador">Opción 5 Administrador</string>

    <!-- Opcion para todos los perfiles -->
    <string name="OpcionPerfil">Perfil</string>

    <!--Encabezado -->
    <string name="TXTNombreYApellido">Khe</string>


    <string name="TXTListaClientes">Lista de Clientes</string>
    <string name="AccederCRUDUsuarios">CRUD USUARIOS</string>
    <string name="BtnActualizarClienteBD">Actualizar</string>
    <string name="TXTGestionUsuarios">Gestion De Usuarios</string>
    <string name="BtnEliminarClienteBD">Eliminar</string>
    <string name="Agregar">Agregar</string>
    <string name="BuscarUsuario">BuscarUsuario</string>
    <string name="BuscarUsuarioTXT">Buscar Usuario</string>
    <string name="BtnBuscarUsuario">Buscar Usuario</string>

    <!--Alimentos -->
    <string name="TXTAgregarAlimento">Agregar Alimento +</string>
    <string name="TXTGuardarAlimento">Guardar Alimento</string>
    <string name="TXTNombreAlimento">Nombre del Alimento</string>
    <string name="TXTRegistroAlimento">Registro Alimento</string>
    <string name="TXTEditarAlimento">Alimento</string>
    <string name="CaloriasAlimento">Calorías</string>

    <!--Plan Nutricional -->
    <string name="TXTAgregarPlan">Agregar Plan +</string>
    <string name="TXTGuardarPlan">Guardar Plan</string>
    <string name="TXTNombrePlan">Nombre Plan</string>
    <string name="OperacionInsertarUsuario">Insertar Usuario</string>
    <string name="BtnModificarNombrePlan">Modificar Nombre Plan</string>
    <string name="TXTSeleccionePlanNutricional">Seleccione Plan Nutricional</string>


    <string name="TXTPreguntaUno">¿Cual fue tu apodo de pequeño/a?</string>
    <string name="TXTPreguntaDos">¿Cual fue el nombre de tu primera Mascota?</string>
    <string name="BtnReestablecerPassword">¿Olvidaste tu Contraseña?</string>
    <string name="BtnRestablecerPasswordR">Reestablecer Contraseña</string>
    <string name="address">Direccion</string>
    <string name="PerfilNombresyApellidos">Nombres y Apellidos</string>
    <string name="PerfilRegresar">Regresar</string>
    <string name="PerfilFechaNacimiento">Fecha de Nacimiento</string>
    <string name="PerfilTXTFechaNacimiento">Fecha de Nacimiento</string>
    <string name="PerfilTXTNumeroTelefono">Numero de telefono</string>
    <string name="PerfilNumeroTelefono">Numero de telefono</string>
    <string name="PerfilTXTCorreo">Email</string>
    <string name="PerfilCorreo">Correo Electronico</string>
    <string name="PerfilTXTDireccion">Direccion</string>
    <string name="PerfilDireccion">Direccion de persona</string>
    <string name="BtnHuellaDactilar">Validar Huella</string>
    <string name="TXTReestablecerPassword">Reestablecer Contraseña</string>
    <string name="TXTNuevoPasswordUsuario">Nuevo Password</string>
    <string name="PerfilTXTCiudad">Ciudad</string>
    <string name="PerfilCiudad">Nombre de la ciudad</string>
    <string name="OpcionActualizarPerfil">Actualizar Datos</string>
    <string name="OpcionActualizarPasswordPerfil">Actualizar Password</string>
    <string name="TXTActualizarDatos">Actualizar Datos</string>
    <string name="TXTActualizarCredenciales">Actualizar Credenciales</string>
    <string name="TXTPasswordAntiguoUsuario">Password Antiguo</string>
    <string name="TXTPasswordNuevoUsuario">Password Nuevo</string>
    <string name="BtnActualizarPreguntasUsuarioBD">Actualizar Preguntas</string>
    <string name="BtnActualizarContraseñaUsuarioBD">Actualizar Contraseña</string>
    <!--Plan Alimentos -->
    <string name="TXTSeleccioneElAlimentoQueQuiere">Seleccione el Alimento que desea</string>
    <!--HIJO -->
    <string name="TXTAgregarHijo">Agregar Hijo + </string>
    <string name="TXTRegistroHijo">Registrar Hijo</string>
    <string name="TXTNombreHijo">Nombre Hijo</string>
    <string name="TXTEstaturaHijo">Estatura Hijo en metros</string>
    <string name="TXTEdadHijo">Edad Hijo en años</string>
    <string name="TXTPesoHijo">Peso Hijo en kilogramos</string>
    <string name="BtnGuardarHijo">Guardar Hijo</string>
    <string name="job_success">Job Success</string>
    <string name="ratings">Calificacion</string>
    <string name="about_me">Acerca de mi</string>
    <string name="my_desc">Soy un nutriólogo con formación sólida en el área de la nutrición  clínica trabajando conforme al código ético y deontológico en el que la alimentación y la promoción de hábitos saludables  son mis pilares,  estableciendo en las personas estilos de vida saludables  para lograr una vida plena, con bienestar y calidad de vida. Ejerciendo  siempre  bajo el respaldo científico actualizado. </string>
    <string name="contact">Contacto</string>
    <string name="skills">Habilidades</string>
    <string name="samplereview">Eres muy buen nutriologo</string>
    <string name="TXTMisPacientes">Mis Pacientes</string>
    <string name="TXTEditarHijo">Editar Hijo</string>
    <string name="TXTCrearNuevoPlan">Crear nuevo plan</string>
    <string name="TXTCrearNuevoPlanN">Crea un nuevo plan nutricional</string>
    <string name="TXTCrearNuevoAlimento">Agrega un nuevo Alimento</string>
    <string name="TXTActualizarAlimento">Actualizar Alimento</string>
    <string name="TXTActualizarNuevoAlimento">Actualizar alimento existente</string>
    <!--Plan Diario -->
    <string name="TXTPlanDiario">Plan Diario</string>
    <string name="BtnGuardarComentario">Guardar Comentario</string>
    <string name="BtnVistoBueno">Dar el visto bueno</string>
    <string name="TXTAprobado">Aprobado:</string>
    <string name="TXTAsignarPlan">Asignar Plan</string>
    <string name="TXTAsignarNuevoPlan">Asignar un nuevo plan nutricional</string>
    <string name="MisCalificaciones">Mis Calificaciones</string>
    <string name="progreso_nutricional">Tu progreso nutricional</string>
    <string name="OpcionesCliente">Opciones Cliente</string>
    <string name="OpcionesNutriologo">Opciones Nutriologo</string>
</resources>