<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/Opcionestxt"
        android:title="@string/Opcionestxt">
        <menu>
            <item
                android:id="@+id/Opcion_uno_Administrador"
                android:title="@string/Opcion_uno_Administrador"
                android:icon="@drawable/uno_ico">
            </item>
            <item
                android:id="@+id/Opcion_dos_Administrador"
                android:title="@string/Opcion_dos_Administrador"
                android:icon="@drawable/dos_ico">
            </item>

        </menu>
    </item>
    <item
        android:id="@+id/OpcionesCliente"
        android:title="@string/OpcionesCliente">
        <menu>
            <item
                android:id="@+id/Opcion_uno_Cliente"
                android:title="@string/Opcion_uno_Cliente"
                android:fontFamily="@font/proximanovaregular"
                android:icon="@drawable/uno_ico">
            </item>
            <item
                android:id="@+id/Opcion_dos_Cliente"
                android:title="@string/Opcion_dos_Cliente"
                android:fontFamily="@font/proximanovaregular"
                android:icon="@drawable/dos_ico">
            </item>
            <item
                android:id="@+id/Opcion_tres_Cliente"
                android:title="@string/Opcion_tres_Cliente"
                android:fontFamily="@font/proximanovaregular"
                android:icon="@drawable/tres_ico">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/OpcionesNutriologo"
        android:title="@string/OpcionesNutriologo">
        <menu>
            <item
                android:id="@+id/Opcion_uno_Nutriologo"
                android:title="@string/Opcion_uno_Nutriologo"
                android:icon="@drawable/uno_ico">
            </item>
            <item
                android:id="@+id/Opcion_dos_Nutriologo"
                android:title="@string/Opcion_dos_Nutriologo"
                android:icon="@drawable/dos_ico">
            </item>
            <item
                android:id="@+id/Opcion_tres_Nutriologo"
                android:title="@string/Opcion_tres_Nutriologo"
                android:icon="@drawable/tres_ico">
            </item>
            <item
                android:id="@+id/Opcion_cinco_Nutriologo"
                android:title="@string/MisCalificaciones"
                android:icon="@drawable/cuatro_ico">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/MasOpcionestxt"
        android:title="@string/MasOpcionestxt">
        <menu>
            <item
                android:id="@+id/Opcion_tres_Administrador"
                android:title="@string/OpcionPerfil"
                android:icon="@drawable/tres_ico">
            </item>
            <item
                android:id="@+id/Salir"
                android:title="@string/Salir"
                android:icon="@drawable/cuatro_ico"/>
        </menu>
    </item>
</menu>