<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentosCliente.RegistrarHijo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TituloRegistroHijo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/TXTRegistroHijo"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/AgregarFotoHijo"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="EscogerImagenDeGaleria"
                app:srcCompat="@drawable/imagen_ico" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/NombreHijo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/TXTNombreHijo" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/EstaturaHijo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/TXTEstaturaHijo" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/EdadHijo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/TXTEdadHijo" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/PesoHijo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/TXTPesoHijo" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/GuardarHijo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BtnGuardarHijo" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>