<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TXTGestionUsuarios"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <ImageView
                android:layout_marginTop="10dp"
                android:id="@+id/ActualizarFotoCliente"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/imagen_ico" />


            <!--Nombres -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/TXTActualizarNombreUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/TXTNombreUsuario"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Apellidos -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/TXTActualizarApellidoUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/TXTApellidoUsuario"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Fecha de Nacimiento -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/TXTActualizarFechaNacimientoUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:clickable="true"
                    android:hint="@string/TXTFechaNacimientoUsuario"
                    android:inputType="date" />


            </com.google.android.material.textfield.TextInputLayout>

            <!-- Correo Electronico -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/TXTActualizarCorreoUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/TXTCorreoUsuario"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <!--Direccion Usuario -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/TXTActualizarDireccionUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/TXTDireccionUsuario"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Ciudad Usuario -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/TXTActualizarCiudadUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/TXTCiudadUsuario"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--TelefonoUsuario -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/TXTActualizarTelefonoUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/TXTTelefonoUsuario"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/BtnActualizarClienteBD"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="#3b5998"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:text="@string/BtnActualizarClienteBD" />

            <Button
                android:id="@+id/BtnEliminarrClienteBD"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="#C60909"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"
                android:text="@string/BtnEliminarClienteBD" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>