<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentosAdministrador.PerfilAdministrador">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_top">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/PerfilImagen"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/lion"/>

        <TextView
            android:id="@+id/PerfilNombresyApellidos"
            style="@style/TextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/PerfilNombresyApellidos" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/bg_button_rounded">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="6dp"
            android:layout_marginStart="7dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"
            android:src="@drawable/atras_ico"
            android:background="@drawable/bg_circle"/>

        <TextView
            android:id="@+id/PerfilRegresar"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/PerfilRegresar" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/perfil_ico"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/PerfilTXTFechaNacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PerfilTXTFechaNacimiento"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/PerfilFechaNacimiento"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PerfilFechaNacimiento" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/telefono_ico"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/PerfilTXTNumeroTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PerfilTXTNumeroTelefono"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/PerfilNumeroTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PerfilNumeroTelefono"
                    style="@style/TextDescription"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/email_ico"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/PerfilTXTCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PerfilTXTCorreo"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/PerfilCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PerfilCorreo"
                    style="@style/TextDescription"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/direccion_ico"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/PerfilTXTDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PerfilTXTDireccion"
                    style="@style/TextBlackTitle"/>

                <TextView
                    android:id="@+id/PerfilDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PerfilDireccion"
                    style="@style/TextDescription"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>